# ParseCertificate

./: CMakeLists.txt  LICENSE
openssl/include/openssl/: opensslconf.h
openssl/lib/: 4758cca.lib  aep.lib  atalla.lib  capi.lib  chil.lib  cswift.lib  fips_premain_dso.lib  gmp.lib  gost.lib  libeay32.lib  nuron.lib  padlock.lib  ssleay32-static.lib  ssleay32.lib  sureware.lib  ubsec.lib
src/: main.cpp  parse.cpp  parse.h
